@@ -1,5 +1,6 @@
 from ucommon 5.0.5 to 5.0.6
 - generic object save/auto-restore.
+- separation of shell::error() from shell::errexit(0,...)
 
 from ucommon 5.0.4 to 5.0.5
 - fix for commoncpp emulation when no direct parent commoncpp thread.
